# Python_JornadaDados

./: README.md
Aula01/: README.md  kpi.py
Aula02/: README.md  exercicio001.py  exercicio002.py  exercicio003.py  exercicio004.py  exercicio005.py  exercicio006.py  exercicio007.py  exercicio008.py  exercicio009.py  exercicio010.py  exercicio011.py  exercicio012.py  exercicio013.py  exercicio014.py  exercicio015.py  exercicio016.py  exercicio017.py  exercicio018.py  exercicio019.py  exercicio020.py  exercicio021.py  exercicio022.py  exercicio023.py  exercicio024.py  exercicio025.py  kpi.py
Aula03/: README.md  exercicio01.py  exercicio02.py  exercicio03.py  exercicio04.py  exercicio05.py  exercicio06.py  exercicio07.py  exercicio08.py  exercicio09.py  exercicio10.py  exercicio11.py  exercicio12.py  exercicio13.py  exercicio14.py  exercicio15.py  kpi.py  main.py
Aula04/: README.md  arquivos.py  exercicio01.py  exercicio02.py  exercicio03.py  exercicio04.py  exercicio05.py  exercicio06.py  exercicio07.py  exercicio08.py  exercicio09.py  exercicio10.py  exercicio11.py  exercicio12.py  exercicio13.py  exercicio14.py  exercicio15.py  exercicio16.py  exercicio17.py  exercicio18.py  exercicio19.py  exercicio20.py  kpi.py
Aula06/: main.py  pyproject.toml
Aula07/: README.md  etl.py  exemplo_00.py
Aula08/: pyproject.toml
