[project]
name = "aula06"
version = "0.1.0"
description = ""
authors = [
    {name = "Heraldo Cruz",email = "hccruz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
